[package]
name = "pt_dump_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pt_dump_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
nc = { version = "0.8.5" }
pt_dump_lib = { path = "../pt_dump_lib", version = "0.1.0" }
lru = "0.8.0"
